test/pass/simvar-assign.rnp
(L:ABC) = 1;
(L:ABC, number) = 1;
---
1 (>L:ABC)
1 (>L:ABC,number)
